--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --logo-text-color: #000000;
     --hero-title-color: #ffffff;
     --background-button-color: #f5f4fa;
+    --background-social-color: #afb1b8;
 }
 
 body {
@@ -145,19 +146,19 @@ ul, p, h1, h2, h3, h4, h5, h6 {
 
 
 .header-address {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+    text-decoration: none;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
 }
 
 .header-address:hover, 
 .header-address:focus {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
     color: var(--accent-color);
 }
 
@@ -166,6 +167,17 @@ ul, p, h1, h2, h3, h4, h5, h6 {
     display: block;
 }
 
+.icon-header {
+    fill: currentColor;
+    margin-right:10px;
+}
+
+.icon-header:hover,
+.icon-header:focus {
+    fill: var(--accent-color);
+}
+
+
 /*--------------------MAIN------------------------*/
 
 /*-------------HERO-----------*/
@@ -173,6 +185,16 @@ ul, p, h1, h2, h3, h4, h5, h6 {
 .hero {
     padding: 200px 0;
     background-color: #2F303A;
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border: 1px solid var(--logo-text-color);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .hero .container {
@@ -224,8 +246,11 @@ ul, p, h1, h2, h3, h4, h5, h6 {
 
 .info-list {
     display: flex;
+     
     align-content: center;
 }
+
+
 
 .info-list>li:not(:last-child) {
     margin-right: 30px;
@@ -246,6 +271,15 @@ ul, p, h1, h2, h3, h4, h5, h6 {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--second-text-color);
+}
+
+.info-soc {
+    display: block;
+    height: 120px;
+    padding: 20px 100px;
+    max-width: 270px;
+    background-color: var(--background-button-color);
+    margin-bottom: 30px;
 }
 
 /*-------------WORK-----------*/
@@ -298,8 +332,49 @@ ul, p, h1, h2, h3, h4, h5, h6 {
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-    padding-bottom: 30px;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
     color: var(--second-text-color);
+}
+
+.team-soc-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.team-soc-items {
+    width: 44px;
+    height: 44px;
+}
+
+.team-soc-items:not(:last-child) {
+    margin-right: 10px;
+}
+
+.team-soc-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--hero-title-color);
+    color: var(--background-social-color)
+}
+
+.team-soc-link:hover {
+    background-color: var(--accent-color);
+    color: var(--hero-title-color);
+}
+
+.team-soc-link:hover .team-soc-icons {
+    fill: var(--hero-title-color);
+}
+
+.team-soc-icons {
+    fill: currentColor;
 }
 
 /*-------------PORTFOLIO-----------*/
@@ -377,12 +452,48 @@ ul, p, h1, h2, h3, h4, h5, h6 {
    
 }
 
+.examples-box {
+
+}
+
+.examples-box:hover {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+/*-------------PARTNERS-----------*/
+
+.partners-list {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.partners-items {
+    border: 1px solid var(--background-social-color);
+    max-width: 170px;
+    border-radius: 4px;
+    padding: 16px 32px;
+}
+
+.partners-items:not(:last-child) {
+    margin-right:30px;
+}
+
+.partners-items:hover {
+    border-color: var(--accent-color);
+}
+
 
 /*-------------FOOTER-----------*/
 
 .footer {
     background-color: #2F303A;
     padding: 60px 0;
+}
+
+.footer .container {
+    display: flex;
+    align-items: baseline;
 }
 
 
@@ -433,4 +544,62 @@ ul, p, h1, h2, h3, h4, h5, h6 {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--accent-color);
+}
+
+.logo-container {
+    display: inline-block;
+    margin-right: 70px;
+}
+.soc-container {
+display: inline-block;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+
+}
+.social-soc-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.social-soc-items {
+    width: 44px;
+    height: 44px;
+    margin-top: 20px;
+}
+
+.social-soc-items:not(:last-child) {
+    margin-right: 10px;
+
+}
+
+
+.social-soc-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: var(--background-social-color)
+}
+
+.social-soc-link:hover {
+    background-color: var(--accent-color);
+    color: var(--hero-title-color);
+}
+
+.social-soc-link:hover .social-soc-icons {
+    fill: var(--hero-title-color);
+}
+
+.social-soc-icons {
+    fill: currentColor;
 }
