--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ ul, p, h1, h2, h3, h4, h5, h6 {
 
 
 .header-address {
+    display: flex;
     justify-content: center;
     align-items: center;
     font-weight: 500;
@@ -455,7 +456,7 @@ ul, p, h1, h2, h3, h4, h5, h6 {
 }
 
 .examples-link:hover {
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /*-------------PARTNERS-----------*/
@@ -472,15 +473,15 @@ ul, p, h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     align-items: center;
     border: 1px solid var(--background-social-color);
-    max-width: 170px;
+    width: 170px;
+    height: 92px;
     border-radius: 4px;
-    padding: 16px 32px;
     fill: var(--background-social-color)
 }
 
 .partners-link:hover,
 .partners-link:focus {
-    color: var(--accent-color);
+    fill: var(--accent-color);
     border-color: var(--accent-color);
 }
 
@@ -602,12 +603,8 @@ color: #FFFFFF;
 
 .social-soc-link:hover {
     background-color: var(--accent-color);
-    color: var(--hero-title-color);
 }
 
-.social-soc-link:hover .social-soc-icons {
-    fill: var(--hero-title-color);
-}
 
 .social-soc-icons {
     fill: currentColor;
